; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/scc/extr_scc_bfe_sbus.c_scc_sbus_probe.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/scc/extr_scc_bfe_sbus.c_scc_sbus_probe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.scc_softc = type { i32* }

@.str = private unnamed_addr constant [3 x i8] c"zs\00", align 1
@.str.1 = private unnamed_addr constant [29 x i8] c"Zilog Z8530 dual channel SCC\00", align 1
@scc_z8530_class = common dso_local global i32 0, align 4
@SBUS_REGSHFT = common dso_local global i32 0, align 4
@SBUS_RCLK = common dso_local global i32 0, align 4
@ENXIO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @scc_sbus_probe to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @scc_sbus_probe(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca %struct.scc_softc*, align 8
  %5 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = call %struct.scc_softc* @device_get_softc(i32 %6)
  store %struct.scc_softc* %7, %struct.scc_softc** %4, align 8
  %8 = load i32, i32* %3, align 4
  %9 = call i8* @ofw_bus_get_name(i32 %8)
  store i8* %9, i8** %5, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = call i32 @strcmp(i8* %10, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0))
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %22, label %13

13:                                               ; preds = %1
  %14 = load i32, i32* %3, align 4
  %15 = call i32 @device_set_desc(i32 %14, i8* getelementptr inbounds ([29 x i8], [29 x i8]* @.str.1, i64 0, i64 0))
  %16 = load %struct.scc_softc*, %struct.scc_softc** %4, align 8
  %17 = getelementptr inbounds %struct.scc_softc, %struct.scc_softc* %16, i32 0, i32 0
  store i32* @scc_z8530_class, i32** %17, align 8
  %18 = load i32, i32* %3, align 4
  %19 = load i32, i32* @SBUS_REGSHFT, align 4
  %20 = load i32, i32* @SBUS_RCLK, align 4
  %21 = call i32 @scc_bfe_probe(i32 %18, i32 %19, i32 %20, i32 0)
  store i32 %21, i32* %2, align 4
  br label %24

22:                                               ; preds = %1
  %23 = load i32, i32* @ENXIO, align 4
  store i32 %23, i32* %2, align 4
  br label %24

24:                                               ; preds = %22, %13
  %25 = load i32, i32* %2, align 4
  ret i32 %25
}

declare dso_local %struct.scc_softc* @device_get_softc(i32) #1

declare dso_local i8* @ofw_bus_get_name(i32) #1

declare dso_local i32 @strcmp(i8*, i8*) #1

declare dso_local i32 @device_set_desc(i32, i8*) #1

declare dso_local i32 @scc_bfe_probe(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
